fix issues with render and remove R 3.2 requirement

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: funr
 Title: Simple Utility Providing Terminal Access to all R Functions
 Description: A small utility which wraps Rscript and provides access to all R functions from the shell.
-Version: 0.0.1.9002
-Authors@R: person("Sahil", "Seth", email = "sahil.seth@me.com", role = c("aut", "cre"))
-Depends: R (>= 3.2.2)
+Version: 0.1.0
+Authors@R: person("Sahil", "Seth", email = "me@sahilseth.com", role = c("aut", "cre"))
 License: GPL
 LazyData: true
 URL: https://github.com/sahilseth/funr
+BugReports: https://github.com/sahilseth/funr/issues
