--- a/.travis.yml
+++ b/.travis.yml
@@ -1,59 +1,33 @@
-# .travis.yml using container-based infrastructure
 
-## following: https://github.com/jtilly/R-travis-container-example
-
-# use c as catch-all language
 language: c
+sudo: required
 
-# use containers
-sudo: false
+before_install:
+  - curl -OL https://raw.githubusercontent.com/metacran/r-builder/master/pkg-build.sh
+  - chmod 755 pkg-build.sh
+  - cp pkg-build.sh rbuildertest
+  - cd rbuildertest
+  - ./pkg-build.sh bootstrap
 
-# only run for pushes to master branch
-branches:
-  only:
-    - master
-    - devel
-
-# install R: use r-packages-precise (https://cran.r-project.org/bin/linux/ubuntu/precise/)
-# as source which is white listed (https://github.com/travis-ci/apt-source-whitelist/)
-addons:
-  apt:
-    sources:
-    - r-packages-precise
-    packages:
-    - r-base-dev
-    - r-recommended
-
-# cache local R libraries directory:
-cache:
-  directories:
-   - ~/Rlib
-# Be strict when checking our package
-warnings_are_errors: false
-
-
-# install the package and dependencies:
-# - create directory for R libraries (if not already exists)
-# - create .Renviron with location of R libraries
-# - define R repository in .Rprofile
-# - add .travis.yml to .Rbuildignore
-# - install devtools if not already installed
-# - install covr if not already installed
-# - update all installed packages
-# - install package with dependencies
 install:
-  - mkdir -p ~/Rlib
-  - echo 'R_LIBS=~/Rlib' > .Renviron
-  - echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
-  - echo '.travis.yml' > .Rbuildignore
-  - Rscript -e 'if(!"devtools" %in% rownames(installed.packages())) { install.packages("devtools", dependencies = TRUE) }'
-  - Rscript -e 'if(!"covr" %in% rownames(installed.packages())) { install.packages("covr", dependencies = TRUE) }'
-  - Rscript -e 'update.packages(ask = FALSE, instlib = "~/Rlib")'
-  - Rscript -e 'devtools::install_deps(pkg = ".", dependencies = TRUE)'
+  - ./pkg-build.sh install_deps
 
-# Build and check package
 script:
-  - R CMD build . --no-build-vignettes --no-manual
-  - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
-  - R CMD check "${PKG_FILE_NAME}" --no-build-vignettes --no-manual --as-cran rpack
+  - ./pkg-build.sh run_build
+  - ./pkg-build.sh run_check
 
+after_failure:
+  - ./pkg-build.sh dump_logs
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
+
+env:
+  matrix:
+    - RVERSION=oldrel
+    - RVERSION=release
+    - RVERSION=devel
+    - RVERSION=3.1.3
+    - RVERSION=3.0.3
