--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: required
 before_install:
   - curl -OL https://raw.githubusercontent.com/metacran/r-builder/master/pkg-build.sh
   - chmod 755 pkg-build.sh
-#  - ./pkg-build.sh bootstrap
+  - ./pkg-build.sh bootstrap
 
 install:
   - ./pkg-build.sh install_deps
