--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Simple Utility Providing Terminal Access to all R Functions
 Description: A small utility which wraps Rscript and provides access to all R functions from the shell.
 Version: 0.1.1
 Authors@R: person("Sahil", "Seth", email = "me@sahilseth.com", role = c("aut", "cre"))
-License: GPL
+License: MIT + file LICENSE
 LazyData: true
 Imports: utils
 URL: https://github.com/sahilseth/funr
