updates to docs etc

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: funr
 Title: Simple Utility Providing Terminal Access to all R Functions
-Description: A small utility which wraps Rscript and provides access to all R functions from the shell.
+Description: A small utility which wraps Rscript and provides access to all R
+    functions from the shell.
 Version: 0.1.2
 Authors@R: person("Sahil", "Seth", email = "me@sahilseth.com", role = c("aut", "cre"))
 License: GPL
 LazyData: true
-Imports: utils
+Imports:
+    utils
 URL: https://github.com/sahilseth/funr
 BugReports: https://github.com/sahilseth/funr/issues
+RoxygenNote: 5.0.1.9000
